# hs-vcard

./: .gitignore  vcard.cabal
src/Text/: VCard.hs
